feat: add description & adjst style

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -44,9 +44,12 @@
   }
   
   .listItem {
-    margin: 0 0 1.25rem;
+    margin: 1rem 0 .5rem 0;
   }
   
   .lightText {
     color: #666;
+  }
+  .between_title_description{
+    margin-bottom: 10px 0 20px 0;
   }
